# evfuncs

./: .gitignore  .travis.yml  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
doc/: CHANGELOG.md
src/: evfuncs.py
src/evfuncs/: __about__.py  __init__.py  evfuncs.py
tests/: test_evfuncs.py
tests/data_for_tests/: make_oracle_data_for_tests.m
tests/data_for_tests/gy6or6_032312_subset/: gy6or6_baseline_230312_0808.138.cbin_smooth_data.mat  gy6or6_baseline_230312_0808.138.cbin_unedited_SegmentNotes_output.mat  gy6or6_baseline_230312_0809.141.cbin_filtsong.mat  gy6or6_baseline_230312_0809.141.cbin_unedited_SegmentNotes_output.mat  gy6or6_baseline_230312_0810.148.cbin_filtsong.mat  gy6or6_baseline_230312_0810.148.cbin_smooth_data.mat  gy6or6_baseline_230312_0810.148.cbin_unedited_SegmentNotes_output.mat  gy6or6_baseline_230312_0811.159.cbin_filtsong.mat  gy6or6_baseline_230312_0811.159.cbin_smooth_data.mat  gy6or6_baseline_230312_0816.179.cbin_filtsong.mat  gy6or6_baseline_230312_0816.179.cbin_unedited_SegmentNotes_output.mat  gy6or6_baseline_230312_0817.183.cbin_filtsong.mat  gy6or6_baseline_230312_0817.183.cbin_unedited_SegmentNotes_output.mat  gy6or6_baseline_230312_0819.190.cbin_smooth_data.mat  gy6or6_baseline_230312_0820.196.cbin_smooth_data.mat  gy6or6_baseline_230312_0821.202.cbin_filtsong.mat
tests/fixtures/: __init__.py  files.py  paths.py
tests/test_data/gy6or6_032312_subset/: gy6or6_baseline_230312_0808.138.cbin_filtsong.mat  gy6or6_baseline_230312_0808.138.cbin_smooth_data.mat  gy6or6_baseline_230312_0809.141.cbin_filtsong.mat  gy6or6_baseline_230312_0809.141.cbin_smooth_data.mat  gy6or6_baseline_230312_0810.148.cbin_filtsong.mat  gy6or6_baseline_230312_0810.148.cbin_smooth_data.mat  gy6or6_baseline_230312_0811.159.cbin_filtsong.mat  gy6or6_baseline_230312_0811.159.cbin_smooth_data.mat  gy6or6_baseline_230312_0811.159.cbin_unedited_SegmentNotes_output.mat  gy6or6_baseline_230312_0813.163.cbin_filtsong.mat  gy6or6_baseline_230312_0813.163.cbin_smooth_data.mat  gy6or6_baseline_230312_0813.163.cbin_unedited_SegmentNotes_output.mat  gy6or6_baseline_230312_0816.179.cbin_filtsong.mat  gy6or6_baseline_230312_0816.179.cbin_smooth_data.mat  gy6or6_baseline_230312_0817.183.cbin_filtsong.mat  gy6or6_baseline_230312_0817.183.cbin_smooth_data.mat  gy6or6_baseline_230312_0819.190.cbin_filtsong.mat  gy6or6_baseline_230312_0819.190.cbin_smooth_data.mat  gy6or6_baseline_230312_0819.190.cbin_unedited_SegmentNotes_output.mat  gy6or6_baseline_230312_0820.196.cbin_filtsong.mat  gy6or6_baseline_230312_0820.196.cbin_smooth_data.mat  gy6or6_baseline_230312_0820.196.cbin_unedited_SegmentNotes_output.mat  gy6or6_baseline_230312_0821.202.cbin_filtsong.mat  gy6or6_baseline_230312_0821.202.cbin_smooth_data.mat  gy6or6_baseline_230312_0821.202.cbin_unedited_SegmentNotes_output.mat  make_oracle_data_for_smooth_data_and_bandpass_filtfilt.m
