[tool.poetry]
name = "evfuncs"
version = "0.3.2.post1"
description = "Functions for working with files created by the EvTAF program and the evsonganaly GUI"
authors = ["David Nicholson <nickledave@users.noreply.github.com>"]
license = "BSD"
readme = "README.md"
repository = "https://github.com/NickleDave/evfuncs"
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: Implementation :: CPython',
]

[tool.poetry.dependencies]
python = ">=3.6"
numpy = ">=1.18.1"
scipy = ">=1.2.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
