[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "evfuncs"
description = "Functions for working with files created by the EvTAF program and the evsonganaly GUI"
version = "0.3.5"
authors = [
    {name = "David Nicholson", email = "nickledave@users.noreply.github.com"}
]
dependencies = [
    "numpy >=1.18.1",
    "scipy >=1.2.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: CPython',
]

[project.optional-dependencies]
test = [
    "pytest >=6.2.2"
]

[project.urls]
Source = "https://github.com/NickleDave/evfuncs"

[tool.flit.sdist]
exclude = [
    "tests/data_for_tests"
]
